tests/neg-macros/BigFloat/Test_2.scala
import test.BigFloat
object Test extends App {
  val x: BigFloat = 1234.45e3333333333  // error: exponent too large
}